--- a/index.html
+++ b/index.html
@@ -11,19 +11,15 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-
-
-
-
-
-
-
-
-
-
-
-    </main>
+    <div id="imagetrack" data-mouse-down-at="0" data-prev-percentage="0">
+    <img class="image" src="./assets/images/blob-scene-haikei (15).svg" draggable="false">
+    <img class="image" src="./assets/images/blob-scene-haikei (16).svg" draggable="false">
+    <img class="image" src="./assets/images/blob-scene-haikei (17).svg" draggable="false">
+    <img class="image" src="./assets/images/blob-scene-haikei (18).svg" draggable="false">
+    <img class="image" src="./assets/images/blob-scene-haikei (19).svg" draggable="false">
+    <img class="image" src="./assets/images/blob-scene-haikei (20).svg" draggable="false">
+    <img class="image" src="./assets/images/blob-scene-haikei (21).svg" draggable="false">
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
